Changed list elements and added unit sizes

--- a/index.html
+++ b/index.html
@@ -13,16 +13,36 @@
 <body>
 
   <header class="grid">
-    <div class="unit">
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-2">
       <h1>Potion Express</h1>
     </div>
-    <div class="unit">
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2-3 unit-xl-1-2">
       <nav>
-        <ul class="nav">
-          <li><a href="#">Unicorn Tears</a></li>
-          <li><a href="#">Dragon Scales</a></li>
-          <li><a href="#">Yeti Dandruff</a></li>
-          <li><a href="#">Pixie Dust</a></li>
+        <ul class="nav list-group">
+          <li class="btn">
+            <i class="icon i-32">
+              <img src="images/placeholder-triangle.svg" alt="">
+            </i>
+            <a class="icon-link" href="#">Unicorn Tears</a>
+          </li>
+          <li class="btn">
+            <i class="icon i-32">
+              <img src="images/placeholder-triangle.svg" alt="">
+            </i>
+            <a class="icon-link" href="#">Dragon Scales</a>
+          </li>
+          <li class="btn">
+            <i class="icon i-32">
+              <img src="images/placeholder-triangle.svg" alt="">
+            </i>
+            <a class="icon-link" href="#">Yeti Dandruff</a>
+          </li>
+          <li class="btn">
+            <i class="icon i-32">
+              <img src="images/placeholder-triangle.svg" alt="">
+            </i>
+            <a class="icon-link" href="#">Pixie Dust</a>
+          </li>
         </ul>
       </nav>
     </div>
