--- a/index.html
+++ b/index.html
@@ -8,37 +8,37 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre:400,700" rel="stylesheet">
 </head>
 <body>
 
-  <header class="grid">
+  <header class="grid grid-middle">
     <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-2">
-      <h1>Potion Express</h1>
+      <h1 class="text-center bold pad-t">Potion Express</h1>
     </div>
     <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2-3 unit-xl-1-2">
       <nav>
         <ul class="nav list-group">
-          <li class="btn">
-            <i class="icon i-32">
+          <li class="btn island-1-2">
+            <i class="icon i-32 w-1">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
             <a class="icon-link" href="#">Unicorn Tears</a>
           </li>
-          <li class="btn">
-            <i class="icon i-32">
+          <li class="btn island-1-2">
+            <i class="icon i-32 w-1">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
             <a class="icon-link" href="#">Dragon Scales</a>
           </li>
-          <li class="btn">
-            <i class="icon i-32">
+          <li class="btn island-1-2">
+            <i class="icon i-32 w-1">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
             <a class="icon-link" href="#">Yeti Dandruff</a>
           </li>
-          <li class="btn">
-            <i class="icon i-32">
+          <li class="btn island-1-2">
+            <i class="icon i-32 w-1">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
             <a class="icon-link" href="#">Pixie Dust</a>
