--- a/index.html
+++ b/index.html
@@ -12,36 +12,44 @@
 </head>
 <body>
 
-  <header class="grid grid-middle">
+  <header class="masthead logo grid grid-middle gutter">
     <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-2">
-      <h1 class="text-center bold pad-t">Potion Express</h1>
+      <h1 class="exa bold push-0">Potion Express</h1>
     </div>
     <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2-3 unit-xl-1-2">
-      <nav>
-        <ul class="nav list-group">
-          <li class="btn island-1-2">
-            <i class="icon i-32 w-1">
-              <img src="images/placeholder-triangle.svg" alt="">
-            </i>
-            <a class="icon-link" href="#">Unicorn Tears</a>
+      <nav class="pad-t">
+        <ul class="nav list-group block">
+          <li class="btn island-1">
+            <a href="#">
+              <i class="icon i-32 w-1">
+                <img src="images/placeholder-triangle.svg" alt="">
+              </i>
+              <span class="icon-link">Unicorn Tears</span>
+            </a>
           </li>
-          <li class="btn island-1-2">
-            <i class="icon i-32 w-1">
-              <img src="images/placeholder-triangle.svg" alt="">
-            </i>
-            <a class="icon-link" href="#">Dragon Scales</a>
+          <li class="btn island-1">
+            <a href="#">
+              <i class="icon i-32 w-1">
+                <img src="images/placeholder-triangle.svg" alt="">
+              </i>
+              <span class="icon-link">Dragon Scales</span>
+            </a>
           </li>
-          <li class="btn island-1-2">
-            <i class="icon i-32 w-1">
-              <img src="images/placeholder-triangle.svg" alt="">
-            </i>
-            <a class="icon-link" href="#">Yeti Dandruff</a>
+          <li class="btn island-1">
+            <a href="#">
+              <i class="icon i-32 w-1">
+                <img src="images/placeholder-triangle.svg" alt="">
+              </i>
+              <span class="icon-link">Yeti Dandruff</span>
+            </a>
           </li>
-          <li class="btn island-1-2">
-            <i class="icon i-32 w-1">
-              <img src="images/placeholder-triangle.svg" alt="">
-            </i>
-            <a class="icon-link" href="#">Pixie Dust</a>
+          <li class="btn island-1">
+            <a href="#">
+              <i class="icon i-32 w-1">
+                <img src="images/placeholder-triangle.svg" alt="">
+              </i>
+              <span class="icon-link">Pixie Dust</span>
+            </a>
           </li>
         </ul>
       </nav>
