--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
   <header class="masthead logo grid grid-middle gutter">
     <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-2">
-      <h1 class="exa bold push-0">Potion Express</h1>
+      <h1 class="exa bold push-0 pad-t">Potion Express</h1>
     </div>
     <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2-3 unit-xl-1-2">
       <nav class="pad-t">
         <ul class="nav list-group block">
           <li class="btn island-1">
-            <a href="#">
+            <a class="link-box" href="#">
               <i class="icon i-32 w-1">
                 <img src="images/placeholder-triangle.svg" alt="">
               </i>
@@ -28,7 +28,7 @@
             </a>
           </li>
           <li class="btn island-1">
-            <a href="#">
+            <a class="link-box" href="#">
               <i class="icon i-32 w-1">
                 <img src="images/placeholder-triangle.svg" alt="">
               </i>
@@ -36,7 +36,7 @@
             </a>
           </li>
           <li class="btn island-1">
-            <a href="#">
+            <a class="link-box" href="#">
               <i class="icon i-32 w-1">
                 <img src="images/placeholder-triangle.svg" alt="">
               </i>
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li class="btn island-1">
-            <a href="#">
+            <a class="link-box" href="#">
               <i class="icon i-32 w-1">
                 <img src="images/placeholder-triangle.svg" alt="">
               </i>
