--- a/index.html
+++ b/index.html
@@ -12,43 +12,43 @@
 </head>
 <body>
 
-  <header class="masthead logo grid grid-middle gutter">
-    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-2">
+  <header class="masthead logo grid grid-middle gutter-1-2">
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-4 unit-xl-1-3">
       <h1 class="exa bold push-0 pad-t">Potion Express</h1>
     </div>
-    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-2-3 unit-xl-1-2">
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-3-4 unit-xl-2-3">
       <nav class="pad-t">
         <ul class="nav list-group block">
-          <li class="btn island-1">
+          <li class="btn gutter island-1-4">
             <a class="link-box" href="#">
               <i class="icon i-32 w-1">
                 <img src="images/placeholder-triangle.svg" alt="">
               </i>
-              <span class="icon-link">Unicorn Tears</span>
+              <span class="icon-link bold milli">Unicorn Tears</span>
             </a>
           </li>
-          <li class="btn island-1">
+          <li class="btn gutter island-1-4">
             <a class="link-box" href="#">
               <i class="icon i-32 w-1">
                 <img src="images/placeholder-triangle.svg" alt="">
               </i>
-              <span class="icon-link">Dragon Scales</span>
+              <span class="icon-link bold milli">Dragon Scales</span>
             </a>
           </li>
-          <li class="btn island-1">
+          <li class="btn gutter island-1-4">
             <a class="link-box" href="#">
               <i class="icon i-32 w-1">
                 <img src="images/placeholder-triangle.svg" alt="">
               </i>
-              <span class="icon-link">Yeti Dandruff</span>
+              <span class="icon-link bold milli">Yeti Dandruff</span>
             </a>
           </li>
-          <li class="btn island-1">
+          <li class="btn gutter island-1-4">
             <a class="link-box" href="#">
               <i class="icon i-32 w-1">
                 <img src="images/placeholder-triangle.svg" alt="">
               </i>
-              <span class="icon-link">Pixie Dust</span>
+              <span class="icon-link bold milli">Pixie Dust</span>
             </a>
           </li>
         </ul>
